syntax = "proto2";

option cc_enable_arenas = true;

package c2017.vision;

message VisionInput {
  required bool target_found = 1;
  optional double angle_to_target = 2; // Number of radians the robot is left of the target
  optional double distance_to_target = 3; // In meters
}

message VisionStatus {
  required bool target_found = 1;
  optional double angle_to_target = 2; // Number of radians the robot is left of the target
  optional double distance_to_target = 3; // In meters
  required bool has_connection = 4;
  required bool aligned = 5;
}

message VisionGoal {
  required bool should_align = 1;
}
